--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          <i class='bx bxl-github'></i>
         </div>
       </div>
-      <div class="footer">Code with Aarzoo</div>
+      <div class="footer">khalid.js</div>
 
     <script src="script.js"></script>
 </body>
